[gd_scene load_steps=2 format=3 uid="uid://c5migdl1jfh8n"]

[ext_resource type="Script" uid="uid://duc2pmq8g18bq" path="res://Scripts/MainMenu.gd" id="1_tt5f1"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tt5f1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.393
anchor_right = 0.5
anchor_bottom = 0.393
offset_left = -128.0
offset_top = -24.44
offset_right = 128.0
offset_bottom = 23.56
grow_horizontal = 2
grow_vertical = 2
text = "Play"

[node name="PlayGuestButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.485
anchor_right = 0.5
anchor_bottom = 0.485
offset_left = -132.0
offset_top = -23.8
offset_right = 124.0
offset_bottom = 24.2
grow_horizontal = 2
text = "Play As Guest"

[node name="LoginButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.578
anchor_right = 0.5
anchor_bottom = 0.578
offset_left = -128.0
offset_top = -24.24
offset_right = 128.0
offset_bottom = 23.76
text = "Login"

[node name="RegisterButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.67
anchor_right = 0.5
anchor_bottom = 0.67
offset_left = -128.0
offset_top = -23.6
offset_right = 128.0
offset_bottom = 24.4
text = "Register"

[node name="QuitButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.763
anchor_right = 0.5
anchor_bottom = 0.763
offset_left = -128.0
offset_top = -24.04
offset_right = 128.0
offset_bottom = 23.96
text = "Quit"

[node name="LogoutButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 600.0
offset_right = 264.0
offset_bottom = 648.0
text = "Log Out"

[node name="StatusText" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_right = 256.0
offset_bottom = 48.0
grow_vertical = 2
text = "Status: "
vertical_alignment = 1

[node name="StatusLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 100.0
offset_top = 540.0
offset_right = 356.0
offset_bottom = 588.0
vertical_alignment = 1

[connection signal="pressed" from="Panel/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Panel/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="Panel/RegisterButton" to="." method="_on_register_button_pressed"]
[connection signal="pressed" from="Panel/QuitButton" to="." method="_on_quit_button_pressed"]
